fix: Vercelルーティング設定を修正し、Firebase設定のデフォルト値を更新

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/usage.html",
-      "destination": "/usage.html"
-    },
-    {
-      "source": "/(.*)",
+      "source": "/((?!.*\\.).*)",
       "destination": "/index.html"
     }
   ]
