--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "firebase": "^10.7.1",
     "date-fns": "^3.6.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "@line/bot-sdk": "^8.0.0",
+    "node-cron": "^3.0.3",
+    "firebase-admin": "^12.0.0",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -33,6 +37,7 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite-plugin-pwa": "^0.17.4",
+    "@types/node-cron": "^3.0.11"
   }
 } 
