--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,22 @@
       "source": "/((?!.*\\.).*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "crons": [
+    {
+      "path": "/api/send-reminder",
+      "schedule": "0 9 * * 1,3,5"
+    }
+  ],
+  "functions": {
+    "api/webhook.ts": {
+      "maxDuration": 30
+    },
+    "api/send-reminder.ts": {
+      "maxDuration": 30
+    },
+    "api/register-user.ts": {
+      "maxDuration": 30
+    }
+  }
 } 
