Add notification settings with custom LINE schedules and mobile-responsive UI

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,9 @@
     },
     "api/register-user.ts": {
       "maxDuration": 30
+    },
+    "api/update-schedules.ts": {
+      "maxDuration": 30
     }
   }
 } 
