サービス名を「家族の夜ご飯スケジュール」に変更 - 全ファイルのタイトル・表示名を統一、「夕飯」→「夜ご飯」に表記統一、LINE Bot メッセージも更新、package.json, manifest.json, README.md も更新、使い方ページの内容も統一

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "family-dinner-calendar",
+  "name": "family-dinner-schedule",
   "version": "1.0.1",
-  "description": "家族夕飯管理サイト - 家族全員が夕飯の出席状況を簡単に管理・共有",
+  "description": "家族の夜ご飯スケジュール - 家族全員が夜ご飯の出席状況を簡単に管理・共有",
   "type": "module",
   "private": true,
   "scripts": {
