--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "家族夕飯カレンダー",
-  "short_name": "夕飯カレンダー",
-  "description": "家族全員が夕飯の出席状況をリアルタイムで管理・共有できるWebアプリ",
+  "name": "家族の夜ご飯スケジュール",
+  "short_name": "夜ご飯スケジュール",
+  "description": "家族全員が夜ご飯の出席状況をリアルタイムで管理・共有できるWebアプリ",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
